refactor: Rename project to E-Ledger
Updates project name and related assets to reflect the broader scope of E-Ledger, moving beyond just State Excise to encompass Pharma and other supply chains. This includes:

- Renaming the npm package in `package.json`.
- Updating the `<title>` tag and loading text in `index.html`.
- Modifying the `name` and `description` in `metadata.json`.
- Expanding the `Sector` enum and adding `ERPType` in `types.ts`.
- Updating `constants.ts` to include `CountryConfig` for broader applicability and refining `BatchStatus` enum.
- Adjusting `ledgerService.ts` to accommodate new types and provide more context for `getBatches`.
- Updating `geminiService.ts` to use exported ledger data.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ExciseLedger | State Excise Blockchain</title>
+    <title>E-Ledger | Global Supply Chain Blockchain</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
     <div id="root" class="h-screen w-full text-slate-400 bg-slate-50">
       <div class="h-full w-full flex flex-col items-center justify-center">
         <div class="w-12 h-12 border-4 border-indigo-200 border-t-indigo-600 rounded-full animate-spin mb-4"></div>
-        <p class="text-sm font-medium animate-pulse">Loading Excise Ledger...</p>
+        <p class="text-sm font-medium animate-pulse">Loading E-Ledger...</p>
       </div>
     </div>
     <script type="module" src="./index.tsx"></script>
