--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Ledger | Global Supply Chain Blockchain</title>
+    <title>E-Ledger India | Secure Supply Chain</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -36,7 +35,7 @@
     <div id="root" class="h-screen w-full text-slate-400 bg-slate-50">
       <div class="h-full w-full flex flex-col items-center justify-center">
         <div class="w-12 h-12 border-4 border-indigo-200 border-t-indigo-600 rounded-full animate-spin mb-4"></div>
-        <p class="text-sm font-medium animate-pulse">Loading E-Ledger...</p>
+        <p class="text-sm font-medium animate-pulse">Loading E-Ledger India...</p>
       </div>
     </div>
     <script type="module" src="./index.tsx"></script>
